--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -1,36 +1,35 @@
-name: Sync Repos
+name: Sync with Remote Repository
 
 on:
   schedule:
-    - cron: '0 */6 * * *'
+    - cron: '*/15 * * * *'  # Every 15 minutes
 
 jobs:
   sync:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout source repo
+    - name: Checkout code
       uses: actions/checkout@v2
-      with:
-        repository: <source-repo-owner>/<source-repo-name>
-        token: ${{ secrets.SOURCE_REPO_TOKEN }}
 
-    - name: Checkout private repo
-      uses: actions/checkout@v2
-      with:
-        repository: <private-repo-owner>/<private-repo-name>
-        token: ${{ secrets.PRIVATE_REPO_TOKEN }}
-        path: ./private-repo
-
-    - name: Sync changes
+    - name: Configure Git
       run: |
-        cd ./private-repo
-        git config user.name "GitHub Actions"
-        git config user.email "<your-email@example.com>"
-        
-        # Fetch and merge changes from source repo
-        git fetch origin
-        git merge origin/main --no-ff --no-commit
-        
-        # Push changes to private repo
-        git push origin main
+        git config --global user.email "action@github.com"
+        git config --global user.name "GitHub Action"
+
+    - name: Fetch latest changes from remote
+      run: git fetch origin
+
+    - name: Check for new commits
+      id: check_commits
+      run: |
+        latest_hash=$(git rev-parse HEAD)
+        remote_hash=$(git rev-parse origin/main)
+        if [ "$latest_hash" != "$remote_hash" ]; then
+          echo "New commit detected"
+          git pull origin main
+          git push origin main
+        else
+          echo "No new commits"
+        fi
+c
